# projectrosetta

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/project_rosetta/: __init__.py
src/project_rosetta/cli/: __init__.py  abd_log2xyt.py  hello.py  plot_path_metrics.py  plot_xyt_metrics.py  xyt2xosc.py
src/project_rosetta/trajectory_conversions/: __init__.py  abd_log_trajectory.py  xyt_to_xosc.py
src/project_rosetta/utils/: csv2xyt.py  scenario_runner.py  scenariorunner.py  xosc_from_py.py
tests/: test_abd_log_trajectory.py  test_csv2xyt.py  test_scenario_runner.py  test_xyt_to_xosc.py
